Alteração do codigo e definição de titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>Webite</h1>
-    
+    <h1>Projeto de Fronte endd e back end</h1>
+    <h2>Site de biblioteca de jogos</h2>
 </body>
 </html>
