ADIÇÃO DE LINKS AO SITE

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
     
     <h2>Finalidade:</h2>
     <p>Ajudar os gamers a manterem um registro organizado de sua jornada nos games, nunca esquecendo os jogos que marcaram sua história e descobrindo novos títulos para jogar.</p>
+<a href="https://store.epicgames.com/pt-BR">link EPC</a>
+<a href="https://store.steampowered.com/libraryupdate?l=portuguese">link STEAM</a>
 </body>
 </html>
